feat: add multi-session agent workflows